--- a/ui/src/main/res/layout/activity_survey.xml
+++ b/ui/src/main/res/layout/activity_survey.xml
@@ -162,8 +162,7 @@
             android:id="@+id/submit"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="117dp"
-            android:layout_marginEnd="117dp"
+            android:layout_gravity="center"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:text="@string/submit"/>
@@ -173,8 +172,7 @@
             android:id="@+id/profile"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="117dp"
-            android:layout_marginEnd="117dp"
+            android:layout_gravity="center"
             android:layout_marginBottom="5dp"
             android:text="@string/profile" />
 
