--- a/ui/src/main/res/layout/dialog_calibration.xml
+++ b/ui/src/main/res/layout/dialog_calibration.xml
@@ -47,6 +47,7 @@
             android:padding="5dp" />
 
         <LinearLayout
+            android:layout_marginStart="5dp"
             android:id="@+id/bg_layout"
             android:layout_width="299dp"
             android:layout_height="wrap_content"
