--- a/ui/src/main/res/layout/dialog_treatment.xml
+++ b/ui/src/main/res/layout/dialog_treatment.xml
@@ -56,6 +56,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_marginStart="5dp"
             android:layout_marginBottom="7dp"
             android:layout_gravity="center"
             android:layout_width="301dp"
@@ -95,7 +96,7 @@
         </LinearLayout>
 
         <LinearLayout
-
+            android:layout_marginStart="5dp"
             android:layout_width="301dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
