New Crowdin updates (#3432)
* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Spanish)

* New translations strings.xml (Russian)

* New translations strings.xml (Russian)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Russian)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Slovak)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations exam.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations oh_strings.xml (Chinese Traditional)

* Update source file strings.xml

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations objectives.xml (Chinese Traditional)

* New translations strings_alarm.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)


--- a/plugins/constraints/src/main/res/values-zh-rTW/exam.xml
+++ b/plugins/constraints/src/main/res/values-zh-rTW/exam.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="dia_whatmeansdia">什麼是關於DIA的真實信息？</string>
+    <string name="dia_whatmeansdia">DIA 有哪些實際的情況？</string>
     <string name="dia_label_exam">胰島素作用時間 (DIA)</string>
-    <string name="dia_profile">您應該在您的個人設置中設置DIA的值。</string>
+    <string name="dia_profile">您應該在您的設定檔中設置DIA的值。</string>
     <string name="dia_minimumis5h">允許的最小值是5小時。</string>
     <string name="dia_hint1">https://wiki.aaps.app/en/latest/Configuration/Config-Builder.html#insulin</string>
     <string name="dia_meaningisequaltodiapump">如果您對之前在幫浦中使用的DIA值感到滿意，則在開始循環時無需更改。</string>
@@ -14,14 +14,14 @@
     <string name="hypott_exercise">為了糾正運動引起的低血糖。</string>
     <string name="hypott_0basal">如果已經有0%的臨時基礎速率運行，防止血糖降低。</string>
     <string name="hypott_hint1">https://wiki.aaps.app/en/latest/Usage/temptarget.html</string>
-    <string name="offlineprofile_whatprofile">哪種個人設置可以離線使用和配置？</string>
-    <string name="offlineprofile_label">主題：離線個人設置</string>
-    <string name="offlineprofile_nsprofile">NS個人設置可以使用，但無法配置。</string>
+    <string name="offlineprofile_whatprofile">哪種設定檔可以離線使用和配置？</string>
+    <string name="offlineprofile_label">主題：離線設定檔</string>
+    <string name="offlineprofile_nsprofile">NS設定檔可以使用，但無法配置。</string>
     <string name="offlineprofile_hint1">https://wiki.aaps.app/en/latest/Configuration/Config-Builder.html#profile</string>
-    <string name="pumpdisconnect_label">在AAPS中應用「斷開幫浦連線」的原因</string>
-    <string name="pumpdisconnect_whattodo">當從身體上斷開幫浦連線時應該怎麼做？</string>
-    <string name="pumpdisconnect_unnecessary">這是不必要的，因為如果幫浦物理上斷開連線，胰島素將不會被輸送。</string>
-    <string name="pumpdisconnect_missinginsulin">它防止AAPS計算幫浦物理斷開連線期間未輸送的胰島素。</string>
+    <string name="pumpdisconnect_label">在AAPS中應用「中斷幫浦連線」的原因</string>
+    <string name="pumpdisconnect_whattodo">當從身體上中斷幫浦連線時應該怎麼做？</string>
+    <string name="pumpdisconnect_unnecessary">這是不必要的，因為如果幫浦物理上中斷連線，胰島素將不會被輸送。</string>
+    <string name="pumpdisconnect_missinginsulin">它防止AAPS計算幫浦物理中斷連線期間未輸送的胰島素。</string>
     <string name="pumpdisconnect_notstop">如果幫浦仍然連線到您的身體，它將不會停止胰島素輸送。</string>
     <string name="pumpdisconnect_openloop">它將使AAPS進入開環模式。</string>
     <string name="pumpdisconnect_hint1">https://wiki.aaps.app/en/latest/Getting-Started/FAQ.html#other-settings</string>
@@ -45,11 +45,11 @@
     <string name="noisycgm_replacesensor">更換持續有干擾或不準確的傳感器。</string>
     <string name="noisycgm_checksmoothing">確認您的CGM應用提供平滑的資料。</string>
     <string name="noisycgm_hint1">https://wiki.aaps.app/en/latest/Usage/Smoothing-Blood-Glucose-Data.html#smoothing-blood-glucose-data</string>
-    <string name="exerciseprofile_label">運動與個人設置</string>
-    <string name="exerciseprofile_whattodo">如何使用個人設置來幫助系統最好地應對有氧運動？</string>
-    <string name="exerciseprofile_switchprofilebelow100">進行個人設置切換到低於100%。</string>
-    <string name="exerciseprofile_switchprofileabove100">進行個人設置切換到高於100%。</string>
-    <string name="exerciseprofile_leaveat100">將個人設置設置為100%。</string>
+    <string name="exerciseprofile_label">運動與設定檔</string>
+    <string name="exerciseprofile_whattodo">如何使用設定檔來幫助系統最好地應對有氧運動？</string>
+    <string name="exerciseprofile_switchprofilebelow100">進行設定檔切換到低於100%。</string>
+    <string name="exerciseprofile_switchprofileabove100">進行設定檔切換到高於100%。</string>
+    <string name="exerciseprofile_leaveat100">將設定檔設置為100%。</string>
     <string name="exerciseprofile_suspendloop">暫停循環。</string>
     <string name="exerciseprofile_hint1">https://wiki.aaps.app/en/latest/Usage/temptarget.html#activity-temp-target</string>
     <string name="exercise_label">運動與臨時目標</string>
@@ -71,10 +71,10 @@
     <string name="basaltest_hint1">https://wiki.aaps.app/en/latest/Getting-Started/FAQ.html#aaps-settings</string>
     <string name="prerequisites_label">前置條件</string>
     <string name="prerequisites_what">設置和使用AAPS的必要條件是什麼？</string>
-    <string name="prerequisites_determinedcorrectprofile">已驗證的個人設置訊息（基礎、IC、ISF、DIA）。</string>
+    <string name="prerequisites_determinedcorrectprofile">已驗證的設定檔訊息（基礎、IC、ISF、DIA）。</string>
     <string name="prerequisites_computer">一台安裝並配置了Android Studio的電腦。</string>
     <string name="prerequisites_phone">一部受支援的手機。</string>
-    <string name="prerequisites_pump">如果計劃運行閉環，則需要一個兼容的胰島素幫浦。</string>
+    <string name="prerequisites_pump">如果計劃運行閉環，則需要一個相容的胰島素幫浦。</string>
     <string name="prerequisites_nightscout">Nightscout，用於記錄所有資料並檢查設定。</string>
     <string name="prerequisites_tidepoolaccount">一個Tidepool帳號。</string>
     <string name="prerequisites_googleaccount">一個Google帳號。</string>
@@ -86,8 +86,8 @@
     <string name="prerequisites_supportedcgm">一個受支援的CGM。</string>
     <string name="prerequisites2_label">前置條件</string>
     <string name="prerequisites2_what">設置和使用AAPS的必要條件是什麼？</string>
-    <string name="prerequisites2_profile">設定個人設置所需的驗證信息（ISF、I:C比率、基礎速率、DIA等）。</string>
-    <string name="prerequisites2_device">一個兼容的Android設備（如手機、完整的Android手錶或平板電腦）。</string>
+    <string name="prerequisites2_profile">設定設定檔所需的驗證訊息（ISF、I:C比率、基礎速率、DIA等）。</string>
+    <string name="prerequisites2_device">一個相容的Android設備（如手機、完整的Android手錶或平板電腦）。</string>
     <string name="prerequisites2_internet">AAPS在閉環中運行需要網絡連線。</string>
     <string name="prerequisites2_supportedcgm">一個受支援的CGM和適當的應用來接收手機/設備上的血糖值。</string>
     <string name="prerequisites2_hint1">https://wiki.aaps.app/en/latest/Module/module.html</string>
@@ -95,7 +95,7 @@
     <string name="whatistrue">檢查所有正確的答案。</string>
     <string name="update_git">您需要在您的電腦上安裝並配置Git。</string>
     <string name="update_asap">當AAPS的更新版本釋出時，早期版本可能在指定時間後被遠端限制。</string>
-    <string name="update_keys">您應該保存並記錄密鑰庫的位置，並使用與之前安裝相同的簽名密鑰進行更新。</string>
+    <string name="update_keys">您應該儲存並記錄密鑰庫的位置，並使用與之前安裝相同的簽章密鑰進行更新。</string>
     <string name="update_neverupdate">如果系統運行良好，絕不要更新。</string>
     <string name="update_askfriend">如果您在構建apk時遇到困難，您可以安裝由朋友構建的apk。</string>
     <string name="update_hint1">https://wiki.aaps.app/en/latest/Installing-AndroidAPS/Update-to-new-version.html#update-to-a-new-version-or-branch</string>
@@ -120,7 +120,7 @@
     <string name="sensitivity_label">敏感性外掛</string>
     <string name="sensitivity_which">檢查所有正確的答案。</string>
     <string name="sensitivity_adjust">敏感性外掛允許AAPS調整因臨時或短期的胰島素敏感性變化（例如荷爾蒙變化或注射部位的吸收問題）。</string>
-    <string name="sensitivity_edit">敏感性外掛為用戶提供對基礎速率、I:C比率和ISF的建議變更，可用於編輯個人設置。</string>
+    <string name="sensitivity_edit">敏感性外掛為用戶提供對基礎速率、I:C比率和ISF的建議變更，可用於編輯設定檔。</string>
     <string name="sensitivity_cannula">記錄套管更換將重置自動敏感比率至100%。</string>
     <string name="sensitivity_time">一些外掛選項有可配置的時間範圍，用戶可以設置。</string>
     <string name="sensitivity_hint1">https://wiki.aaps.app/en/latest/Configuration/Sensitivity-detection-and-COB.html</string>
@@ -146,14 +146,14 @@
     <string name="cob2_longer">增加IC會使計算出的碳水化合物吸收時間變長</string>
     <string name="cob2_shorter">增加IC會使計算出的碳水化合物吸收時間變短</string>
     <string name="cob2_no_effect">增加IC不會影響計算出的碳水化合物吸收</string>
-    <string name="cob3_question">改變個人設置百分比如何影響COB計算？</string>
-    <string name="cob3_longer">將個人設置設為150%會使計算出的碳水化合物吸收時間變長</string>
-    <string name="cob3_shorter">將個人設置設為150%會使計算出的碳水化合物吸收時間變短</string>
-    <string name="cob3_no_effect">將個人設置設為150%不會影響計算出的碳水化合物吸收</string>
+    <string name="cob3_question">改變設定檔百分比如何影響COB計算？</string>
+    <string name="cob3_longer">將設定檔設為150%會使計算出的碳水化合物吸收時間變長</string>
+    <string name="cob3_shorter">將設定檔設為150%會使計算出的碳水化合物吸收時間變短</string>
+    <string name="cob3_no_effect">將設定檔設為150%不會影響計算出的碳水化合物吸收</string>
     <string name="cob_hint1">https://wiki.aaps.app/en/latest/Usage/COB-calculation.html#how-does-aaps-calculate-the-cob-value</string>
     <string name="iob_value">IOB值受已發出的臨時基礎速率影響。</string>
     <string name="iob_hightemp">當您的血糖低於目標時，不會給予高臨時基礎速率。</string>
-    <string name="iob_negiob">在沒有運動的情況下，長時間出現負IOB表示您的個人設置過於強大，需要在設定中減少胰島素。</string>
+    <string name="iob_negiob">在沒有運動的情況下，長時間出現負IOB表示您的設定檔過於強大，需要在設定中減少胰島素。</string>
     <string name="iob_posiob">長時間出現正IOB表示胰島素抵抗或未報告的進餐。</string>
     <string name="breadgrams_label">碳水化合物輸入和注射</string>
     <string name="breadgrams_grams">估計和記錄攝入的碳水化合物時應僅使用克。</string>
@@ -165,58 +165,58 @@
     <string name="extendedcarbs_handling">您可以使用e-碳水化合物（延長碳水化合物）做什麼？</string>
     <string name="extendedcarbs_future">計劃未來的碳水化合物攝入，可能分配在一個時間段內（類似於分配在一個時間段內的延長注射）。</string>
     <string name="extendedcarbs_free">記錄您想要隱藏在AAPS之外的「免費」運動碳水化合物。</string>
-    <string name="extendedcarbs_fat">e-碳水化合物（分配在未來）可以幫助AAPS處理高脂肪/蛋白質餐。</string>
+    <string name="extendedcarbs_fat">延長碳水化合物（緩慢釋放）可以幫助AAPS處理高脂肪/蛋白質餐。</string>
     <string name="extendedcarbs_rescue">記錄您用於治療低血糖的救援碳水化合物。</string>
     <string name="extendedcarbs_hint1">https://wiki.aaps.app/en/latest/Usage/Extended-Carbs.html</string>
     <string name="nsclient_label">遠端監控</string>
     <string name="nsclient_howcanyou">如何遠端監控AAPS（例如監控您的孩子）？</string>
     <string name="nsclient_nightscout">AAPSClient應用、Nightscout應用和Nightscout網頁都允許您遠端監控AAPS。</string>
-    <string name="nsclient_dexcomfollow">其他應用（例如Dexcom follow、xDrip運行在跟隨模式下）允許您遠端跟踪某些參數（例如血糖/傳感器值），但使用不同的算法，因此可能會有不準確的IOB或COB值。</string>
+    <string name="nsclient_dexcomfollow">其他應用（例如Dexcom follow、xDrip運行在追蹤模式下）允許您遠端跟踪某些參數（例如血糖/傳感器值），但使用不同的算法，因此可能會有不準確的IOB或COB值。</string>
     <string name="nsclient_data">要遠端追踪AAPS，兩個設備都必須有網絡連線（例如通過Wi-Fi或行動網路）。</string>
-    <string name="nsclient_fullcontrol">AAPSClient作為遠端跟隨者使用時，既可以監控也可以完全控制AAPS。</string>
+    <string name="nsclient_fullcontrol">AAPSClient作為遠端追蹤者使用時，既可以監控也可以完全控制AAPS。</string>
     <string name="nsclient_hint1">https://wiki.aaps.app/en/latest/Children/Children.html</string>
     <string name="isf_label_exam">胰島素敏感因子 (ISF)</string>
     <string name="isf_increasingvalue">提高ISF值將導致輸送更多的胰島素來覆蓋特定量的碳水化合物。</string>
     <string name="isf_decreasingvalue">降低ISF值將導致輸送更多的胰島素來修正高於目標的血糖。</string>
     <string name="isf_noeffect">當血糖水平低於目標時，提高或降低ISF不會影響胰島素輸送。</string>
     <string name="isf_preferences">應在您的AAPS偏好設定中輸入ISF。</string>
-    <string name="isf_profile">在您的個人設置中更改ISF值即可應用更改。</string>
+    <string name="isf_profile">在您的設定檔中更改ISF值即可應用更改。</string>
     <string name="isf_hint1">https://wiki.aaps.app/en/latest/Getting-Started/FAQ.html#insulin-sensitivity-factor-isf-mmol-l-u-or-mg-dl-u</string>
     <string name="isf_hint2">https://wiki.aaps.app/en/latest/Usage/Profiles.html</string>
-    <string name="ic_multiple">您可以在個人設置中使用多個I:C比率值。</string>
-    <string name="ic_isf">如果您在個人設置中更改ISF，應該同時更改I:C比率。</string>
+    <string name="ic_multiple">您可以在設定檔中使用多個I:C比率值。</string>
+    <string name="ic_isf">如果您在設定檔中更改ISF，應該同時更改I:C比率。</string>
     <string name="ic_label_exam">胰島素與碳水化合物比率 (I:C ratio)</string>
     <string name="ic_increasingvalue">較高的I:C比率會導致對特定量的碳水化合物輸送較少的胰島素。</string>
     <string name="ic_decreasingvalue">較低的I:C比率會導致對特定量的碳水化合物輸送較少的胰島素。</string>
-    <string name="ic_noeffect">如果COB為0，更改IC比率將導致修正特定BG值的胰島素量不同。</string>
+    <string name="ic_noeffect">如果COB為0，更改IC比率將導致修正特定血糖值的胰島素量不同。</string>
     <string name="ic_different">如果您計算麵包（交換）單位為10克或12克，IC將有所不同。</string>
     <string name="ic_meaning">IC的含義是：1單位胰島素覆蓋多少麵包（交換）單位？</string>
     <string name="ic_hint1">https://wiki.aaps.app/en/latest/Getting-Started/FAQ.html#insulin-to-carb-ratio-ic-g-u</string>
-    <string name="profileswitch_label">個人設置切換</string>
-    <string name="profileswitch_pctwillchange">當指定90%的個人設置切換時，哪些答案是正確的？</string>
+    <string name="profileswitch_label">設定檔切換</string>
+    <string name="profileswitch_pctwillchange">當指定90%的設定檔切換時，哪些答案是正確的？</string>
     <string name="profileswitch_basallower">基礎速率將降低10%。</string>
     <string name="profileswitch_isfhigher">ISF將提高10%。</string>
     <string name="profileswitch_iclower">I:C比率的數值將降低10%。</string>
     <string name="profileswitch_unchanged">ISF和I:C比率將保持不變。</string>
     <string name="profileswitch_hint1" formatted="false">https://wiki.aaps.app/en/latest/Usage/Profiles.html#profile-switch</string>
-    <string name="profileswitch2_label">個人設置切換</string>
-    <string name="profileswitch2_pctwillchange">當指定120%的個人設置切換時，哪些答案是正確的？</string>
+    <string name="profileswitch2_label">設定檔切換</string>
+    <string name="profileswitch2_pctwillchange">當指定120%的設定檔切換時，哪些答案是正確的？</string>
     <string name="profileswitch2_bghigher">目標血糖將提高20%。</string>
     <string name="profileswitch2_basalhigher">基礎速率將提高20%。</string>
     <string name="profileswitch2_bgunchanged">目標血糖將保持不變。</string>
     <string name="profileswitch2_isfhigher">ISF將提高20%。</string>
-    <string name="profileswitchtime_label">個人設置切換</string>
+    <string name="profileswitchtime_label">設定檔切換</string>
     <string name="profileswitchtime_iwant">如果您比平時早2小時起床，應如何通知AAPS您的時間表變更？</string>
-    <string name="profileswitchtime_2">啟動一個時間偏移為2的個人設置切換</string>
-    <string name="profileswitchtime__2">啟動一個時間偏移為-2的個人設置切換</string>
+    <string name="profileswitchtime_2">啟動一個時間偏移為2的設定檔切換</string>
+    <string name="profileswitchtime__2">啟動一個時間偏移為-2的設定檔切換</string>
     <string name="profileswitchtime_tt">設置即將用餐的臨時目標。</string>
-    <string name="profileswitchtime_100">進行個人設置切換到高於100%。</string>
+    <string name="profileswitchtime_100">進行設定檔切換到高於100%。</string>
     <string name="profileswitchtime_hint1">https://wiki.aaps.app/en/latest/Usage/Profiles.html#timeshift</string>
-    <string name="profileswitch4_label">個人設置變更</string>
-    <string name="profileswitch4_rates">基礎速率、ISF、I:C比率等應在個人設置中設置。</string>
-    <string name="profileswitch4_internet">啟用對您的Nightscout個人設置的更改需要您的AAPS手機具有網絡連線。</string>
-    <string name="profileswitch4_sufficient">編輯個人設置以更改值即可實施所做的更改。</string>
-    <string name="profileswitch4_multi">可以設置多個個人設置並選擇以適應變化的情況（例如荷爾蒙變化、輪班工作、工作日/週末生活方式）。</string>
+    <string name="profileswitch4_label">設定檔變更</string>
+    <string name="profileswitch4_rates">基礎速率、ISF、I:C比率等應在設定檔中設置。</string>
+    <string name="profileswitch4_internet">啟用對您的Nightscout設定檔的更改需要您的AAPS手機具有網絡連線。</string>
+    <string name="profileswitch4_sufficient">編輯設定檔以更改值即可實施所做的更改。</string>
+    <string name="profileswitch4_multi">可以設置多個設定檔並選擇以適應變化的情況（例如荷爾蒙變化、輪班工作、工作日/週末生活方式）。</string>
     <string name="basalhelp_hint1">https://wiki.aaps.app/en/latest/Module/module.html#good-individual-dosage-algorithm-for-your-diabetes-therapy</string>
     <string name="basalhelp_label">基礎速率幫助</string>
     <string name="basalhelp_where">尋求幫助設置基礎速率和其他設置的地方。</string>
