--- a/core/ui/src/main/res/values/protection.xml
+++ b/core/ui/src/main/res/values/protection.xml
@@ -21,6 +21,7 @@
     <string name="unsecure_fallback_descriotion_biometric">In order to be effective, biometric protection needs a master password set for fallback.\n\nPlease set a master password!</string>
 
     <string name="password_set">Password set!</string>
+    <string name="datastore_password_cleared">Stored Export Password cleared!</string>
     <string name="pin_set">PIN set!</string>
     <string name="password_not_set">Password not set</string>
     <string name="pin_not_set">PIN not set</string>
