--- a/wear/src/main/res/layout/activity_custom.xml
+++ b/wear/src/main/res/layout/activity_custom.xml
@@ -78,6 +78,30 @@
         android:visibility="gone" />
 
     <TextView
+        android:id="@+id/patient_name"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:gravity="center"
+        android:textColor="@color/light_grey"
+        android:textSize="21px"
+        android:visibility="gone"
+        tools:text="myName" />
+
+    <TextView
+        android:id="@+id/patient_name_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:gravity="center"
+        android:textColor="@color/light_grey"
+        android:textSize="21px"
+        android:visibility="gone"
+        tools:text="myName" />
+
+    <TextView
         android:id="@+id/iob1"
         android:layout_width="130px"
         android:layout_height="33px"
@@ -98,6 +122,31 @@
         android:textColor="@color/light_grey"
         android:textSize="21px"
         android:textStyle="bold"
+        tools:text="@string/no_iob_u" />
+
+    <TextView
+        android:id="@+id/iob1_Ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:gravity="center"
+        android:textColor="@color/light_grey"
+        android:textSize="21px"
+        android:visibility="gone"
+        tools:text="@string/activity_IOB" />
+
+    <TextView
+        android:id="@+id/iob2_Ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:gravity="center"
+        android:textColor="@color/light_grey"
+        android:textSize="21px"
+        android:textStyle="bold"
+        android:visibility="gone"
         tools:text="@string/no_iob_u" />
 
     <TextView
@@ -124,6 +173,31 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/cob1_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:gravity="center"
+        android:text="@string/activity_carb"
+        android:textColor="@color/light_grey"
+        android:textSize="21px"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/cob2_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:gravity="center"
+        android:text="@string/no_cob_g"
+        android:textColor="@color/light_grey"
+        android:textSize="21px"
+        android:visibility="gone"
+        android:textStyle="bold" />
+
+    <TextView
         android:id="@+id/delta"
         android:layout_width="59px"
         android:layout_height="32px"
@@ -136,6 +210,19 @@
         tools:text="+/-" />
 
     <TextView
+        android:id="@+id/delta_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:gravity="center"
+        android:textColor="@color/light_grey"
+        android:textSize="23px"
+        android:textStyle="bold"
+        android:visibility="gone"
+        tools:text="+/-" />
+
+    <TextView
         android:id="@+id/avg_delta"
         android:layout_width="59px"
         android:layout_height="32px"
@@ -145,6 +232,19 @@
         android:textColor="@color/light_grey"
         android:textSize="23px"
         android:textStyle="bold"
+        tools:text="@string/abbreviation_average" />
+
+    <TextView
+        android:id="@+id/avg_delta_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:gravity="center"
+        android:textColor="@color/light_grey"
+        android:textSize="23px"
+        android:textStyle="bold"
+        android:visibility="gone"
         tools:text="@string/abbreviation_average" />
 
 
@@ -176,6 +276,20 @@
         tools:text="100%" />
 
     <TextView
+        android:id="@+id/rig_battery_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:fontFamily="@font/roboto_condensed_bold"
+        android:gravity="center"
+        android:textColor="@color/light_grey"
+        android:textSize="23px"
+        android:textStyle="bold"
+        android:visibility="gone"
+        tools:text="100%" />
+
+    <TextView
         android:id="@+id/basalRate"
         android:layout_width="91px"
         android:layout_height="32px"
@@ -186,6 +300,20 @@
         android:textColor="@color/light_grey"
         android:textSize="23px"
         android:textStyle="bold"
+        tools:text="@string/no_tmp_basal_u_h" />
+
+    <TextView
+        android:id="@+id/basalRate_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:fontFamily="@font/roboto_condensed_bold"
+        android:gravity="center"
+        android:textColor="@color/light_grey"
+        android:textSize="23px"
+        android:textStyle="bold"
+        android:visibility="gone"
         tools:text="@string/no_tmp_basal_u_h" />
 
     <TextView
@@ -201,7 +329,18 @@
         android:visibility="visible"
         tools:text="bgi" />
 
-
+    <TextView
+        android:id="@+id/bgi_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:gravity="center"
+        android:textColor="@color/light_grey"
+        android:textSize="23px"
+        android:textStyle="bold"
+        android:visibility="gone"
+        tools:text="bgi" />
 
     <TextView
         android:id="@+id/status"
@@ -214,6 +353,16 @@
         tools:text="E xU/h  IOB: x (x+x)"
         android:visibility="gone" />
 
+    <TextView
+        android:id="@+id/status_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:maxLines="1"
+        android:textSize="23px"
+        tools:text="E xU/h  IOB: x (x+x)"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/time"
@@ -254,7 +403,7 @@
         android:textSize="46px"
         android:visibility="gone"
         tools:text="00" />
-    <!-- minute -->
+    <!-- second -->
     <TextView
         android:id="@+id/second"
         android:layout_width="0px"
@@ -268,8 +417,6 @@
         tools:text="00" />
 
     <!-- 12h period AM / PM -->
-
-
     <TextView
         android:id="@+id/timePeriod"
         android:layout_width="0px"
@@ -346,8 +493,22 @@
         android:textStyle="bold"
         tools:text="--'" />
 
+    <TextView
+        android:id="@+id/loop_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="8px"
+        android:layout_marginTop="0px"
+        android:background="@drawable/loop_grey_25"
+        android:gravity="center"
+        android:textColor="@color/light_grey"
+        android:textSize="24px"
+        android:textStyle="bold"
+        android:visibility="gone"
+        tools:text="--'" />
+
     <ImageView
-        android:id="@+id/direction2"
+        android:id="@+id/direction"
         android:layout_width="40px"
         android:layout_height="40px"
         android:layout_marginLeft="291px"
@@ -355,6 +516,16 @@
         android:orientation="vertical"
         android:src="@drawable/ic_invalid"
         android:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/direction_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:orientation="vertical"
+        android:src="@drawable/ic_invalid"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/timestamp"
@@ -369,6 +540,19 @@
         tools:text="--'" />
 
     <TextView
+        android:id="@+id/timestamp_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:gravity="left"
+        android:textColor="@color/light_grey"
+        android:textSize="25px"
+        android:textStyle="bold"
+        android:visibility="gone"
+        tools:text="--'" />
+
+    <TextView
         android:id="@+id/sgv"
         android:layout_width="400px"
         android:layout_height="100px"
@@ -380,6 +564,20 @@
         android:textColor="@color/light_grey"
         android:textSize="74px"
         tools:text="200" />
+
+    <TextView
+        android:id="@+id/sgv_ext1"
+        android:layout_width="0px"
+        android:layout_height="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginTop="0px"
+        android:fontFamily="@font/roboto_condensed_bold"
+        android:gravity="center"
+        android:lines="1"
+        android:textColor="@color/light_grey"
+        android:textSize="74px"
+        tools:text="200"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/cover_plate"
